css/main.css
/* ... */
.content-style hr, .content-narrow hr, .content-wide hr, #tribe-events-content hr, .half hr, .two-third hr, .three-quarter hr, .accordion .accordion-box .accordion-box-content hr, .event-info hr {
  border: 0;
  border-bottom: 1px solid #d4d5d6;
  padding: 0;
  margin: 25px 0;
  clear: both; }

.content-style button, .content-narrow button, .content-wide button, #tribe-events-content button, .half button, .two-third button, .three-quarter button, .accordion .accordion-box .accordion-box-content button, .event-info button, .content-style input[type=submit], .content-narrow input[type=submit], .content-wide input[type=submit], #tribe-events-content input[type=submit], .half input[type=submit], .two-third input[type=submit], .three-quarter input[type=submit], .accordion .accordion-box .accordion-box-content input[type=submit], .event-info input[type=submit], .content-style input[type=reset], .content-narrow input[type=reset], .content-wide input[type=reset], #tribe-events-content input[type=reset], .half input[type=reset], .two-third input[type=reset], .three-quarter input[type=reset], .accordion .accordion-box .accordion-box-content input[type=reset], .event-info input[type=reset], .content-style .button, .content-narrow .button, .content-wide .button, #tribe-events-content .button, .half .button, .two-third .button, .three-quarter .button, .accordion .accordion-box .accordion-box-content .button, .event-info .button {
  padding: 9px 45px 6px 12px;
  background: #2C5871 url(../img/icon-button-arrow.png) right center no-repeat;
  color: white;
  font-family: "Avenir Demi", sans-serif;
  font-weight: normal;
  border: 3px solid white;
  box-shadow: 4px 4px 10px #babbbd;
  border-radius: 10px;
  text-decoration: none; }

h1, h2, h3, h4, h5, h6 {
  color: #2C5871; }
  .teal h1, .teal h2, .teal h3, .teal h4, .teal h5, .teal h6 {
    color: #15B0BF; }
  .forest h1, .forest h2, .forest h3, .forest h4, .forest h5, .forest h6 {
    color: #007940; }
  .green h1, .green h2, .green h3, .green h4, .green h5, .green h6 {
    color: #017A40; }
  .grey h1, .grey-light h1, .grey h2, .grey-light h2, .grey h3, .grey-light h3, .grey h4, .grey-light h4, .grey h5, .grey-light h5, .grey h6, .grey-light h6 {
    color: #939598; }
  .lime h1, .lime h2, .lime h3, .lime h4, .lime h5, .lime h6 {
    color: #7DB241; }
  .navy h1, .navy h2, .navy h3, .navy h4, .navy h5, .navy h6 {
    color: #2C5871; }
  .orange h1, .orange h2, .orange h3, .orange h4, .orange h5, .orange h6 {
    color: #F99B1F; }
  .red h1, .red h2, .red h3, .red h4, .red h5, .red h6 {
    color: #e22627; }
  .yellow h1, .yellow h2, .yellow h3, .yellow h4, .yellow h5, .yellow h6 {
    color: #D3D627; }

header {
  position: relative;
  padding: 30px 0 0; }
  header .logo {
    margin-right: 60px;
    padding: 20px 0 5px 10px;
    max-width: 450px; }
    @media only screen and (min-width: 768px) {
      header .logo {
        padding: 30px 0 10px 20px; } }
  header nav {
    position: relative;
    background: #939598; }
    header nav button {
      position: absolute;
      right: 5px;
      top: -50px;
      width: 40px;
      height: 40px;
      border: 0;
      padding: 0;
      background: white;
      color: black;
      background: url(../img/icon-menu.png) center center no-repeat;
      color: transparent; }
      @media only screen and (min-width: 600px) {
        header nav button {
          display: none; } }
    header nav ul.nav-menu {
      display: none;
      background: #6d6f72;
      position: relative;
      z-index: 1000;
      text-align: center;
      box-shadow: inset 0px 15px 22px -10px rgba(100, 100, 100, 0.3);
      border-bottom: 1px solid white;
      zoom: 1; }
      header nav ul.nav-menu:before, header nav ul.nav-menu:after {
        content: "";
        display: table; }
      header nav ul.nav-menu, header nav ul.nav-menu:before, header nav ul.nav-menu:after {
        clear: both; }
      @media only screen and (min-width: 600px) {
        header nav ul.nav-menu {
          display: block; } }
      header nav ul.nav-menu > li:nth-child(9) {
        background: #15B0BF; }
      header nav ul.nav-menu > li:nth-child(10) {
        background: #017A40; }
        header nav ul.nav-menu > li:nth-child(10) > a {
          font-style: italic; }
      header nav ul.nav-menu > li {
        box-shadow: inset 0px 15px 22px -10px rgba(100, 100, 100, 0.3); }
        @media only screen and (min-width: 600px) {
          header nav ul.nav-menu > li {
            box-shadow: none;
            position: relative;
            float: left;
            width: 20%; }
            header nav ul.nav-menu > li:nth-child(5) ul.sub-menu, header nav ul.nav-menu > li:nth-child(10) ul.sub-menu {
              left: -100%; }
            header nav ul.nav-menu > li:nth-child(1) a, header nav ul.nav-menu > li:nth-child(6) a {
              border-left: 0; } }
        @media only screen and (min-width: 1024px) {
          header nav ul.nav-menu > li {
            width: 9.5%; }
            header nav ul.nav-menu > li:nth-child(4), header nav ul.nav-menu > li:nth-child(5) {
              width: 12%; }
            header nav ul.nav-menu > li:nth-child(5) ul.sub-menu, header nav ul.nav-menu > li:nth-child(10) ul.sub-menu {
              left: 0; }
            header nav ul.nav-menu > li:nth-child(6) a {
              border-left: 1px solid white; } }
        header nav ul.nav-menu > li a {
          display: block;
          font-family: "Avenir", sans-serif;
          font-weight: normal;
          padding: 14px 2px;
          font-size: 12px;
          line-height: 15px;
          width: 100%;
          color: white;
          text-decoration: none;
          text-transform: uppercase;
          text-align: center; }
/* ... */

